--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -1,7 +1,12 @@
-<hr>
-	<div class="border-box">  
-	  <p class="tweet"><%= tweet.body %></p>	
-	  Likes (<%= tweet.likes %>)
-	  Retweets (<%= tweet.retweets %>)
-  </div>
- <hr>
+<%= turbo_frame_tag dom_id(tweet) do %>
+	<hr>
+		<div class="border-box">  
+		  <p class="tweet"><%= tweet.body %></p>	
+		  <%= button_to "Likes (#{tweet.likes_count})", tweet_like_path(tweet), method: :post %>
+		  <br>
+		  <%= button_to "Retweets (#{tweet.retweets_count})", tweet_retweet_path(tweet), method: :post %>
+		 	<br>
+		  <%= link_to "Edit", edit_tweet_path(tweet) %>
+	  </div>
+	<hr>
+<% end %>
