--- a/app/views/tweets/edit.html.erb
+++ b/app/views/tweets/edit.html.erb
@@ -1,6 +1,10 @@
 <h1>Editing Tweet</h1>
 
-<%= render 'form', tweet: @tweet %>
+<%= turbo_frame_tag dom_id(@tweet) do %> 	
+	<hr>
+		<%= render 'form', tweet: @tweet %>
+		<br>
+		<%= link_to 'Cancel', @tweet %>
+	<hr>
+<% end %>
 
-<%= link_to 'Show', @tweet %> |
-<%= link_to 'Back', tweets_path %>
