--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,19 +1,6 @@
 <p id="notice"><%= notice %></p>
+<%= turbo_frame_tag dom_id(@tweet) do %> 	
+	<%= render @tweet %>
+<% end %>
 
-<p>
-  <strong>Body:</strong>
-  <%= @tweet.body %>
-</p>
 
-<p>
-  <strong>Likes:</strong>
-  <%= @tweet.likes %>
-</p>
-
-<p>
-  <strong>Retweets:</strong>
-  <%= @tweet.retweets %>
-</p>
-
-<%= link_to 'Edit', edit_tweet_path(@tweet) %> |
-<%= link_to 'Back', tweets_path %>
