--- a/app/javascript/stylesheets/_tweets_style.scss
+++ b/app/javascript/stylesheets/_tweets_style.scss
@@ -21,3 +21,15 @@
     color: #0591f8;
     font-size: 1.3rem;
 }
+
+.card {
+  /* Change background color */
+  background-color: white;
+
+  /* Add border */
+  border: 1px solid #bacdd8;
+
+  /* Add space between the border and the content */
+  padding: 8px;
+  border-radius: 12px;
+}
